# json-c

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  TESTS.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
include/json_c/: json.h  types.h
src/app/: main.c
src/lib/: json.c  json_compat.c  json_internal.c  json_internal.h  token_free.c  token_free.h  token_helpers.h  types.h
src/lib/parsers/: array.c  array.h  number.c  number.h  object.c  object.h  pair.c  pair.h  shared.c  shared.h  string.c  string.h  value.c  value.h
src/lib/printers/: print_array.c  print_array.h  print_false.c  print_false.h  print_null.c  print_null.h  print_number.c  print_number.h  print_object.c  print_object.h  print_pair.c  print_pair.h  print_string.c  print_string.h  print_token.c  print_token.h  print_true.c  print_true.h
src/lib/types/: arraytoken.h  falsetoken.h  nulltoken.h  numbertoken.h  objecttoken.h  pairtoken.h  stringtoken.h  token.h  truetoken.h
tests/: CMakeLists.txt  test_array.c  test_json_parse.c  test_number.c  test_object.c  test_pair.c  test_printers_array.c  test_printers_number.c  test_printers_object.c  test_printers_pair.c  test_printers_string.c  test_printers_value.c  test_string.c  test_value.c
